feat(#457): Add DataTypeTemplatesService.getEnumValues and enhance findDoLinkedToDa signature
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>